--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -80,6 +80,7 @@
 	"arenella-app-menu-accounts": "Accounts",
 	"arenella-app-menu-candidate-signup": "Candidate Signup",
 	"arenella-app-menu-community": "Community",
+	"arenella-app-menu-contact": "Contact",
 	"arenella-app-menu-emails": "Emails",
 	"arenella-app-menu-faq": "Faq",
 	"arenella-app-menu-job-board": "Job Board",
@@ -97,6 +98,11 @@
 	"arenella-app-no-credits-title": "0 Credits remaining",
 	"arenella-app-validation-errors-text": "Unfortunately it was not possible to perform the actions because:",
 	"arenella-app-validation-errors-title": "Validation Errors",
+	"arenella-contact-company-address": "Company Address",
+	"arenella-contact-company-name": "Company Name",
+	"arenella-contact-company-registration-email": "Email",
+	"arenella-contact-company-registration-number": "Company Registration Number",
+	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "By providing this optional additional information you will help to make your profile\n\t\t\t\t\t\t\t\tstand out to the recruiters",
 	"arenella-create-candidate-additional-info-title": "Additional Information",
 	"arenella-create-candidate-agreement": "By uploading your CV and profile you are agreeing to allow your \n\t\t\t\t\t\t\tCV and details to be stored in the System and shared within the \n\t\t\t\t\t\t\tnetwork of recruiters and clients. ",
