--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -80,6 +80,7 @@
 	"arenella-app-menu-accounts": "Comptes",
 	"arenella-app-menu-candidate-signup": "Inscription Candidat",
 	"arenella-app-menu-community": "Communauté",
+	"arenella-app-menu-contact": "Contact",
 	"arenella-app-menu-emails": "Courriels",
 	"arenella-app-menu-faq": "Faq",
 	"arenella-app-menu-job-board": "Emplois",
@@ -97,6 +98,11 @@
 	"arenella-app-no-credits-title": "0 crédits restants",
 	"arenella-app-validation-errors-text": "Malheureusement, il n'a pas été possible d'effectuer les actions car :",
 	"arenella-app-validation-errors-title": "Erreurs de validation",
+	"arenella-contact-company-address": "Adresse de la société",
+	"arenella-contact-company-name": "Nom de l'entreprise",
+	"arenella-contact-company-registration-email": "E-mail",
+	"arenella-contact-company-registration-number": "Numéro d'entreprise",
+	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "En fournissant ces informations complémentaires facultatives, vous contribuerez à vous démarquez auprès des recruteurs.",
 	"arenella-create-candidate-additional-info-title": "Informations Complémentaires",
 	"arenella-create-candidate-agreement": "En téléchargeant votre CV et votre profil, vous acceptez que votre CV et vos détails soient stockés dans le système et partagés au réseau de recruteurs et de clients.",
