--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -80,6 +80,7 @@
 	"arenella-app-menu-accounts": "Accounts",
 	"arenella-app-menu-candidate-signup": "Kandidaat registratie",
 	"arenella-app-menu-community": "Gemeenschap",
+	"arenella-app-menu-contact": "Contact",
 	"arenella-app-menu-emails": "E-mails",
 	"arenella-app-menu-faq": "Faq",
 	"arenella-app-menu-job-board": "Banen",
@@ -97,6 +98,11 @@
 	"arenella-app-no-credits-title": "0 Credits resterend",
 	"arenella-app-validation-errors-text": "Helaas was het niet mogelijk om de acties uit te voeren omdat:",
 	"arenella-app-validation-errors-title": "Validatiefouten",
+	"arenella-contact-company-address": "Bedrijfsadres",
+	"arenella-contact-company-name": "Bedrijfsnaam",
+	"arenella-contact-company-registration-email": "E-mail",
+	"arenella-contact-company-registration-number": "Bedrijfsregistratienummer",
+	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "Door deze optionele aanvullende informatie te verstrekken, laat u uw profiel extra opvallen voor de recruiters",
 	"arenella-create-candidate-additional-info-title": "Extra informatie",
 	"arenella-create-candidate-agreement": "Door uw CV en profiel te uploaden, gaat u akkoord met uw toestemming\nCV en details die in het systeem moeten worden opgeslagen en binnen het\nnetwerk van recruiters en opdrachtgevers.",
