layout bug fix counties job alert mobil

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -226,7 +226,7 @@
 	"arenella-listing-email-alert": "Create Email Alert",
 	"arenella-listing-email-alert-1": "1/3 Select a Contract type",
 	"arenella-listing-email-alert-2": "2/3 Select roles of interest",
-	"arenella-listing-email-alert-3": "3/3 Select a Countries of interest",
+	"arenella-listing-email-alert-3": "3/3 Select countries of interest",
 	"arenella-listing-email-alert-btn-back": "Back",
 	"arenella-listing-email-alert-btn-confirm": "Confirm",
 	"arenella-listing-email-alert-btn-next": "Next",
