--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -226,7 +226,7 @@
 	"arenella-listing-email-alert": "Créer une alerte",
 	"arenella-listing-email-alert-1": "1/3 Sélectionnez un type de contrat",
 	"arenella-listing-email-alert-2": "2/3 Sélectionnez les rôles qui vous intéressent",
-	"arenella-listing-email-alert-3": "3/3 Sélectionnez un pays d'intérêt",
+	"arenella-listing-email-alert-3": "3/3 Sélectionnez les pays qui vous intéressent",
 	"arenella-listing-email-alert-btn-back": "Retour",
 	"arenella-listing-email-alert-btn-confirm": "Confirmer",
 	"arenella-listing-email-alert-btn-next": "Suivant",
