--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -226,7 +226,7 @@
 	"arenella-listing-email-alert": "Maak een e-mail alert",
 	"arenella-listing-email-alert-1": "1/3 Selecteer een contracttype",
 	"arenella-listing-email-alert-2": "2/3 Selecteer rollen waarin u geïnteresseerd bent",
-	"arenella-listing-email-alert-3": "3/3 Selecteer een land waarin u geïnteresseerd bent",
+	"arenella-listing-email-alert-3": "3/3 Selecteer landen van interesse",
 	"arenella-listing-email-alert-btn-back": "Terug",
 	"arenella-listing-email-alert-btn-confirm": "Bevestigen",
 	"arenella-listing-email-alert-btn-next": "Volgende",
