working delete admin

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -561,7 +561,7 @@
 	"arenella-recruiter-signup-en": "English",
 	"arenella-recruiter-signup-firstname": "First name",
 	"arenella-recruiter-signup-fr": "French",
-	"arenella-recruiter-signup-hdr1": "Create Recruiter Account",
+	"arenella-recruiter-signup-hdr1": "Create Free Recruiter Account",
 	"arenella-recruiter-signup-hdr2": "Sign-up for a free account and start downloading IT Candidate CVs today",
 	"arenella-recruiter-signup-nl": "Dutch",
 	"arenella-recruiter-signup-preferred-lang": "Preferred Language",
