--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -561,7 +561,7 @@
 	"arenella-recruiter-signup-en": "Anglais",
 	"arenella-recruiter-signup-firstname": "Prénom",
 	"arenella-recruiter-signup-fr": "Français",
-	"arenella-recruiter-signup-hdr1": "Créer un compte recruteur",
+	"arenella-recruiter-signup-hdr1": "Créer un compte de recruteur gratuit",
 	"arenella-recruiter-signup-hdr2": "Créez un compte gratuit et commencez à télécharger les CV des candidats informatiques dès aujourd'hui",
 	"arenella-recruiter-signup-nl": "Néerlandais",
 	"arenella-recruiter-signup-preferred-lang": "langue préférée",
