--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -561,7 +561,7 @@
 	"arenella-recruiter-signup-en": "Engels",
 	"arenella-recruiter-signup-firstname": "Voornaam",
 	"arenella-recruiter-signup-fr": "Frans",
-	"arenella-recruiter-signup-hdr1": "Maak een recruiteraccount aan",
+	"arenella-recruiter-signup-hdr1": "Maak een gratis recruiteraccount aan",
 	"arenella-recruiter-signup-hdr2": "Meld u aan voor een gratis account en begin vandaag nog met het downloaden van CV's van IT-kandidaten",
 	"arenella-recruiter-signup-nl": "Nederlands",
 	"arenella-recruiter-signup-preferred-lang": "Voorkeurstaal",
