--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -250,7 +250,7 @@
 	"arenella-listing-publicity-location": "Location",
 	"arenella-listing-publicity-open-position": "Open Position",
 	"arenella-listing-recruiter-details": "Recruiter Details",
-	"arenella-listing-reumeration": "Renumeration",
+	"arenella-listing-reumeration": "Remuneration",
 	"arenella-listing-share-copied-to-clipboard": "Copied to Clipboard",
 	"arenella-listing-share-copy-to-clipboard": "Copy to Clipboard",
 	"arenella-listing-share-popup-text": "You can use the following URL to share this role with friends and colleagues",
@@ -441,7 +441,7 @@
 	"arenella-recruiter-listing-pub-title": "Open Position",
 	"arenella-recruiter-listing-rate": "Rate",
 	"arenella-recruiter-listing-recruiter-details": "Recruiter Details",
-	"arenella-recruiter-listing-renumeration": "Renumeration",
+	"arenella-recruiter-listing-renumeration": "Remuneration",
 	"arenella-recruiter-listing-skills": "Skills",
 	"arenella-recruiter-listing-step1": "1 of 5: Job Info",
 	"arenella-recruiter-listing-step2": "2 of 5: Job Description",
@@ -819,7 +819,7 @@
 	"mp-left-mnu-location": "Location",
 	"mp-left-mnu-name": "Name",
 	"mp-left-mnu-rate-salsary": "Rate/Salary",
-	"mp-left-mnu-renumerationo": "Renumeration",
+	"mp-left-mnu-renumerationo": "Remuneration",
 	"mp-left-mnu-requested-by": "Requested By",
 	"mp-left-mnu-requested-skills": "Skills",
 	"mp-left-mnu-start-date": "Start Date",
