--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -250,7 +250,7 @@
 	"arenella-listing-publicity-location": "Plaats",
 	"arenella-listing-publicity-open-position": "Open positie",
 	"arenella-listing-recruiter-details": "Recruitergegevens",
-	"arenella-listing-reumeration": "Vergoeding",
+	"arenella-listing-reumeration": "Beloning",
 	"arenella-listing-share-copied-to-clipboard": "Gekopieerd naar het klembord",
 	"arenella-listing-share-copy-to-clipboard": "Kopieer naar klembord",
 	"arenella-listing-share-popup-text": "U kunt de volgende URL gebruiken om deze rol te delen met vrienden en collega's",
@@ -441,7 +441,7 @@
 	"arenella-recruiter-listing-pub-title": "Open positie",
 	"arenella-recruiter-listing-rate": "Tarief",
 	"arenella-recruiter-listing-recruiter-details": "Recruitergegevens",
-	"arenella-recruiter-listing-renumeration": "Vergoeding",
+	"arenella-recruiter-listing-renumeration": "Beloning",
 	"arenella-recruiter-listing-skills": "Vaardigheden",
 	"arenella-recruiter-listing-step1": "1 van 5: Taakinfo",
 	"arenella-recruiter-listing-step2": "2 van 5: Functiebeschrijving",
@@ -819,7 +819,7 @@
 	"mp-left-mnu-location": "Plaats",
 	"mp-left-mnu-name": "Naam",
 	"mp-left-mnu-rate-salsary": "Tarief/Salaris",
-	"mp-left-mnu-renumerationo": "Vergoeding",
+	"mp-left-mnu-renumerationo": "Beloning",
 	"mp-left-mnu-requested-by": "Aangevraagd door",
 	"mp-left-mnu-requested-skills": "Vaardigheden",
 	"mp-left-mnu-start-date": "Startdatum",
