Unavailable cities working

--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1,6 +1,7 @@
 {
 	"arenella-accounts-menu-availability": "Beschikbaarheid",
 	"arenella-accounts-menu-candidates": "Kandidaten",
+	"arenella-accounts-menu-cities": "Steden",
 	"arenella-accounts-menu-recruiters": "Recruiters",
 	"arenella-accounts-menu-skills": "Vaardigheden",
 	"arenella-accounts-menu-subscription": "Abonnement",
@@ -27,6 +28,8 @@
 	"arenella-accounts-tabcandidates-email": "E-mail",
 	"arenella-accounts-tabcandidates-id": "Id",
 	"arenella-accounts-tabcandidates-name": "Naam",
+	"arenella-accounts-tabcitties-btn-activate": "Activeren",
+	"arenella-accounts-tabcitties-btn-delete": "Verwijderen",
 	"arenella-accounts-tabrecruiters-count": "Aantal",
 	"arenella-accounts-tabrecruiters-credit-based": "Op krediet gebaseerd",
 	"arenella-accounts-tabrecruiters-expired-subscriptions": "Verlopen abonnement",
@@ -36,6 +39,11 @@
 	"arenella-accounts-tabrecruiters-subscriptions-totals": "Totaal",
 	"arenella-accounts-tabrecruiters-toggle": "Schakelen",
 	"arenella-accounts-tabrecruiters-trial-subscriptions": "Proefabonnement",
+	"arenella-accounts-tabscities-actions": "Acties",
+	"arenella-accounts-tabscities-city": "Stad",
+	"arenella-accounts-tabscities-country": "Land",
+	"arenella-accounts-tabscities-lat": "Lat",
+	"arenella-accounts-tabscities-lon": "Lon",
 	"arenella-accounts-tabskills-actions": "Acties",
 	"arenella-accounts-tabskills-btn-accept": "Aanvaarden",
 	"arenella-accounts-tabskills-btn-pending": "In afwachting",
