--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
 	"arenella-accounts-menu-availability": "Availability",
 	"arenella-accounts-menu-candidates": "Candidates",
+	"arenella-accounts-menu-cities": "Cities",
 	"arenella-accounts-menu-recruiters": "Recruiters",
 	"arenella-accounts-menu-skills": "Skills",
 	"arenella-accounts-menu-subscription": "Subscription",
@@ -27,6 +28,8 @@
 	"arenella-accounts-tabcandidates-email": "Email",
 	"arenella-accounts-tabcandidates-id": "Id",
 	"arenella-accounts-tabcandidates-name": "Name",
+	"arenella-accounts-tabcitties-btn-activate": "Activate",
+	"arenella-accounts-tabcitties-btn-delete": "Delete",
 	"arenella-accounts-tabrecruiters-count": "Count",
 	"arenella-accounts-tabrecruiters-credit-based": "Credit Based",
 	"arenella-accounts-tabrecruiters-expired-subscriptions": "Expired Subscription",
@@ -36,6 +39,11 @@
 	"arenella-accounts-tabrecruiters-subscriptions-totals": "Total",
 	"arenella-accounts-tabrecruiters-toggle": "Toggle",
 	"arenella-accounts-tabrecruiters-trial-subscriptions": "Trial Subscription",
+	"arenella-accounts-tabscities-actions": "Actions",
+	"arenella-accounts-tabscities-city": "City",
+	"arenella-accounts-tabscities-country": "Country",
+	"arenella-accounts-tabscities-lat": "Lat",
+	"arenella-accounts-tabscities-lon": "Lon",
 	"arenella-accounts-tabskills-actions": "Actions",
 	"arenella-accounts-tabskills-btn-accept": "Accept",
 	"arenella-accounts-tabskills-btn-pending": "Pending",
