--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1,6 +1,7 @@
 {
 	"arenella-accounts-menu-availability": "Disponibilité",
 	"arenella-accounts-menu-candidates": "Candidats",
+	"arenella-accounts-menu-cities": "Villes",
 	"arenella-accounts-menu-recruiters": "Recruteurs",
 	"arenella-accounts-menu-skills": "Compétences",
 	"arenella-accounts-menu-subscription": "Abonnement",
@@ -27,6 +28,8 @@
 	"arenella-accounts-tabcandidates-email": "Email",
 	"arenella-accounts-tabcandidates-id": "Id",
 	"arenella-accounts-tabcandidates-name": "Prénom",
+	"arenella-accounts-tabcitties-btn-activate": "Activer",
+	"arenella-accounts-tabcitties-btn-delete": "Supprimer",
 	"arenella-accounts-tabrecruiters-count": "Nombre",
 	"arenella-accounts-tabrecruiters-credit-based": "Basé sur le crédit",
 	"arenella-accounts-tabrecruiters-expired-subscriptions": "Abonnement expiré",
@@ -36,6 +39,11 @@
 	"arenella-accounts-tabrecruiters-subscriptions-totals": "Total",
 	"arenella-accounts-tabrecruiters-toggle": "Basculer",
 	"arenella-accounts-tabrecruiters-trial-subscriptions": "Abonnement d'essai",
+	"arenella-accounts-tabscities-actions": "Actions",
+	"arenella-accounts-tabscities-city": "Ville",
+	"arenella-accounts-tabscities-country": "Pays",
+	"arenella-accounts-tabscities-lat": "Lat",
+	"arenella-accounts-tabscities-lon": "Lon",
 	"arenella-accounts-tabskills-actions": "Actes",
 	"arenella-accounts-tabskills-btn-accept": "Acceptez",
 	"arenella-accounts-tabskills-btn-pending": "En attendant",
