Cities admin screens

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -129,7 +129,7 @@
 	"arenella-create-candidate-perm": "Perm",
 	"arenella-create-candidate-perm-rate": "Perm rate",
 	"arenella-create-candidate-personal-intro": "Personal Introduction",
-	"arenella-create-candidate-photo": "Profile Photo [ .jpeg / .png ] Max 1 MB",
+	"arenella-create-candidate-photo": "Profile Photo [ .jpeg ] Max 1 MB",
 	"arenella-create-candidate-surname": "Surname",
 	"arenella-create-candidate-title": "Register As Candidate",
 	"arenella-create-candidate-to": "To",
