--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -129,7 +129,7 @@
 	"arenella-create-candidate-perm": "Perm",
 	"arenella-create-candidate-perm-rate": "Taux de perm",
 	"arenella-create-candidate-personal-intro": "Présentez-vous",
-	"arenella-create-candidate-photo": "Photo de profil [ .jpeg / .png ] Max 1 Mo",
+	"arenella-create-candidate-photo": "Photo de profil [ .jpeg ] Max 1 Mo",
 	"arenella-create-candidate-surname": "Nom de famille",
 	"arenella-create-candidate-title": "S'inscrire comme candidat",
 	"arenella-create-candidate-to": "À",
