--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -129,7 +129,7 @@
 	"arenella-create-candidate-perm": "Vaste",
 	"arenella-create-candidate-perm-rate": "Vaste Tarief",
 	"arenella-create-candidate-personal-intro": "Persoonlijke introductie",
-	"arenella-create-candidate-photo": "Profielfoto [ .jpeg / .png ] Maximaal 1 MB",
+	"arenella-create-candidate-photo": "Profielfoto [ .jpeg ] Maximaal 1 MB",
 	"arenella-create-candidate-surname": "Achternaam",
 	"arenella-create-candidate-title": "Registreer als kandidaat",
 	"arenella-create-candidate-to": "Naar",
