ugly but working radius search on city location

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -693,6 +693,10 @@
 	"arenella-suggestions-italian": "Italian",
 	"arenella-suggestions-job-title": "Search",
 	"arenella-suggestions-language": "Languages",
+	"arenella-suggestions-location": "Location",
+	"arenella-suggestions-location-city": "City",
+	"arenella-suggestions-location-country": "Country",
+	"arenella-suggestions-location-distance": "Max (KM)",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choose Subscription",
 	"arenella-suggestions-paid-subscription-option": "Paid subscription feature",
 	"arenella-suggestions-paid-subscription-text-1": "This options is only available to users with a paid subscription.",
