--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -693,6 +693,10 @@
 	"arenella-suggestions-italian": "Italien",
 	"arenella-suggestions-job-title": "Cherche",
 	"arenella-suggestions-language": "Langues",
+	"arenella-suggestions-location": "Emplacement",
+	"arenella-suggestions-location-city": "Ville",
+	"arenella-suggestions-location-country": "Pays",
+	"arenella-suggestions-location-distance": "Max (km)",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Choisissez l'abonnement",
 	"arenella-suggestions-paid-subscription-option": "Fonctionnalité d'abonnement payant",
 	"arenella-suggestions-paid-subscription-text-1": "Cette option n'est disponible que pour les utilisateurs disposant d'un abonnement payant.",
