--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -693,6 +693,10 @@
 	"arenella-suggestions-italian": "Italiaans",
 	"arenella-suggestions-job-title": "Zoek",
 	"arenella-suggestions-language": "Talen",
+	"arenella-suggestions-location": "Plaats",
+	"arenella-suggestions-location-city": "Stad",
+	"arenella-suggestions-location-country": "Land",
+	"arenella-suggestions-location-distance": "Maximaal (KM)",
 	"arenella-suggestions-paid-subscription-choose-subscription-btn": "Kies abonnement",
 	"arenella-suggestions-paid-subscription-option": "Betaalde abonnementsfunctie",
 	"arenella-suggestions-paid-subscription-text-1": "Deze optie is alleen beschikbaar voor gebruikers met een betaald abonnement.",
