--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -101,7 +101,7 @@
 	"arenella-app-menu-recruiter-signup": "Recruiter Signup",
 	"arenella-app-menu-statistics": "Statistics",
 	"arenella-app-menu-stats": "Stat's",
-	"arenella-app-menu-suggestions": "Suggestions",
+	"arenella-app-menu-suggestions": "Candidates",
 	"arenella-app-no-credits-text": "Unfortunately you have used your credits for this week. You will receive new credits next week.",
 	"arenella-app-no-credits-title": "0 Credits remaining",
 	"arenella-app-validation-errors-text": "Unfortunately it was not possible to perform the actions because:",
@@ -189,7 +189,7 @@
 	"arenella-homepage-func-news-desc": "Insight into candidate updates (availability, CV update, profile update)",
 	"arenella-homepage-func-news-title": "News Feed",
 	"arenella-homepage-func-suggestions-desc": "A CV database with advanced algorithms to find the best candidates in a matter of seconds.",
-	"arenella-homepage-func-suggestions-title": "Suggestions",
+	"arenella-homepage-func-suggestions-title": "Candidates",
 	"arenella-homepage-getting-started": "The first step is to create an account. You will be asked for your name, your email address and company name. You will receive an email with your login details. ",
 	"arenella-homepage-title-candidates": "The Candidates",
 	"arenella-homepage-title-candidates-availability": "Real time candidate availability",
@@ -400,7 +400,7 @@
 	"arenella-recruiter-alerts-btn-confirm": "Confirm",
 	"arenella-recruiter-alerts-btn-delete": "Delete",
 	"arenella-recruiter-alerts-desc-1": "You currently have no Alert's. Alerts allow you to receive a notification via email whenever a Candidate is added to the system that meets one of your pre-defined searches",
-	"arenella-recruiter-alerts-desc-2": "To add a Search Alert perform a Search in the Suggestions screen and click on 'Create Alert'",
+	"arenella-recruiter-alerts-desc-2": "To add a Search Alert perform a Search in the candidates screen and click on 'Create Alert'",
 	"arenella-recruiter-alerts-name": "Alert Name",
 	"arenella-recruiter-alerts-title": "Search Alerts",
 	"arenella-recruiter-listing-add-skill": "Add Skill",
