--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -101,7 +101,7 @@
 	"arenella-app-menu-recruiter-signup": "Inscription Recruteur",
 	"arenella-app-menu-statistics": "Statistiques",
 	"arenella-app-menu-stats": "Statistiques",
-	"arenella-app-menu-suggestions": "Suggestions",
+	"arenella-app-menu-suggestions": "Candidats",
 	"arenella-app-no-credits-text": "Malheureusement, vous avez utilisé vos crédits pour cette semaine. Vous recevrez de nouveaux crédits la semaine prochaine.",
 	"arenella-app-no-credits-title": "0 crédits restants",
 	"arenella-app-validation-errors-text": "Malheureusement, il n'a pas été possible d'effectuer les actions car :",
@@ -189,7 +189,7 @@
 	"arenella-homepage-func-news-desc": "Aperçu des mises à jour des candidats (disponibilité, mise à jour du CV, mise à jour du profil)",
 	"arenella-homepage-func-news-title": "Nouvelles",
 	"arenella-homepage-func-suggestions-desc": "Une base de CV avec des algorithmes avancés pour trouver les meilleurs candidats en quelques secondes.",
-	"arenella-homepage-func-suggestions-title": "Suggestions",
+	"arenella-homepage-func-suggestions-title": "Candidats",
 	"arenella-homepage-getting-started": "La première étape consiste à créer un compte. Il vous sera demandé votre nom, votre adresse e-mail et le nom de votre entreprise. Vous recevrez un email avec vos informations de connexion. ",
 	"arenella-homepage-title-candidates": "Les candidats",
 	"arenella-homepage-title-candidates-availability": "Disponibilité des candidats en temps réel",
@@ -400,7 +400,7 @@
 	"arenella-recruiter-alerts-btn-confirm": "Confirmer",
 	"arenella-recruiter-alerts-btn-delete": "Supprimer",
 	"arenella-recruiter-alerts-desc-1": "Vous n'avez actuellement aucune alerte. Les alertes vous permettent de recevoir une notification par e-mail chaque fois qu'un candidat est ajouté au système et répond à l'une de vos recherches prédéfinies.",
-	"arenella-recruiter-alerts-desc-2": "Pour ajouter une alerte de recherche, effectuez une recherche dans l'écran Suggestions et cliquez sur « Créer une alerte ».",
+	"arenella-recruiter-alerts-desc-2": "Pour ajouter une alerte de recherche, effectuez une recherche dans l'écran des candidats et cliquez sur « Créer une alerte »",
 	"arenella-recruiter-alerts-name": "Nom de l'alerte",
 	"arenella-recruiter-alerts-title": "Rechercher sur les alertes",
 	"arenella-recruiter-listing-add-skill": "Ajouter une compétence",
