--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -101,7 +101,7 @@
 	"arenella-app-menu-recruiter-signup": "Recruiter registratie",
 	"arenella-app-menu-statistics": "Statistieken",
 	"arenella-app-menu-stats": "Statistieken",
-	"arenella-app-menu-suggestions": "Suggesties",
+	"arenella-app-menu-suggestions": "Kandidaten",
 	"arenella-app-no-credits-text": "Helaas heb je je tegoeden voor deze week opgebruikt. Volgende week ontvang je nieuwe credits.",
 	"arenella-app-no-credits-title": "0 Credits resterend",
 	"arenella-app-validation-errors-text": "Helaas was het niet mogelijk om de acties uit te voeren omdat:",
@@ -189,7 +189,7 @@
 	"arenella-homepage-func-news-desc": "Inzicht in kandidaat-updates (beschikbaarheid, CV-update, profielupdate)",
 	"arenella-homepage-func-news-title": "Nieuwsfeed",
 	"arenella-homepage-func-suggestions-desc": "Een CV-database met geavanceerde algoritmen om binnen enkele seconden de beste kandidaten te vinden.",
-	"arenella-homepage-func-suggestions-title": "Suggesties",
+	"arenella-homepage-func-suggestions-title": "Kandidaten",
 	"arenella-homepage-getting-started": "De eerste stap is het aanmaken van een account. Er wordt gevraagd naar uw naam, uw e-mailadres en bedrijfsnaam. U ontvangt een e-mail met uw inloggegevens. ",
 	"arenella-homepage-title-candidates": "De kandidaten",
 	"arenella-homepage-title-candidates-availability": "Realtime beschikbaarheid van kandidaten",
@@ -400,7 +400,7 @@
 	"arenella-recruiter-alerts-btn-confirm": "Bevestigen",
 	"arenella-recruiter-alerts-btn-delete": "Verwijderen",
 	"arenella-recruiter-alerts-desc-1": "Je hebt momenteel geen Alerts. Met waarschuwingen kunt u via e-mail een melding ontvangen wanneer een kandidaat aan het systeem wordt toegevoegd en aan een van uw vooraf gedefinieerde zoekopdrachten voldoet",
-	"arenella-recruiter-alerts-desc-2": "Om een ​​zoekwaarschuwing toe te voegen, voert u een zoekopdracht uit in het scherm Suggesties en klikt u op 'Maak waarschuwing'",
+	"arenella-recruiter-alerts-desc-2": "Om een zoekwaarschuwing toe te voegen, voert u een zoekopdracht uit op het kandidatenscherm en klikt u op 'Waarschuwing maken'",
 	"arenella-recruiter-alerts-name": "Alert Naam",
 	"arenella-recruiter-alerts-title": "Zoek op Alerts",
 	"arenella-recruiter-listing-add-skill": "Vaardigheid toevoegen",
