--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -753,6 +753,7 @@
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "British Isles",
 	"BULGARIA": "Bulgaria",
+	"BULGARIAN": "Bulgarian",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Central Europe",
 	"create-candidate--profile-image": "There was an issue with the profile image",
@@ -761,18 +762,23 @@
 	"create-candidate-success": "Your details have been successfully uploaded. They will now be reviewed and added to the system",
 	"CREDIT_BASED_SUBSCRIPTION": "Credit Based",
 	"CROATIA": "Croatia",
+	"CROATIAN": "Croatian",
 	"CYPRUS": "Cyprus",
+	"CZECH": "Czech",
 	"CZECH_REPUBLIC": "Czech Republic",
 	"DACH": "Dach",
+	"DANISH": "Danish",
 	"DENMARK": "Denmark",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
 	"ENGLISH": "English",
 	"ESTONIA": "Estonia",
+	"ESTONIAN": "Estonian",
 	"EU_REMOTE": "Europe - Remote",
 	"EUROPE": "Europe",
 	"failure": "Failure",
 	"FINLAND": "Finland",
+	"FINNISH": "Finnish",
 	"FRANCE": "France",
 	"FRENCH": "French",
 	"func-ba": "Business Analyst",
@@ -794,7 +800,10 @@
 	"GERMAN": "German",
 	"GERMANY": "Germany",
 	"GREECE": "Greece",
+	"GREEK": "Greek",
 	"Hide": "Hide",
+	"HINDI": "Hindi",
+	"HUNGARIAN": "Hungarian",
 	"HUNGARY": "Hungry",
 	"INDIA": "India",
 	"info-item-contract-rate": "Contract Rate",
@@ -823,12 +832,15 @@
 	"ITALIAN": "Italian",
 	"ITALY": "Italy",
 	"LATVIA": "Latvia",
+	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
 	"LITHUANIA": "Lithuaia",
+	"LITHUANIAN": "Lithuanian",
 	"login-user-invalid-login": "Invalid Login attempt",
 	"login-user-unable-to-send-email": "Unable to send email. Possibly unknown email.",
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malta",
+	"MALTESE": "Maltese",
 	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
 	"mp-left-failure-failed-to-persits-new-open-position": "Failed to persist new Open Position",
 	"mp-left-mnu-city": "City",
@@ -864,6 +876,7 @@
 	"NORTHERN_EUROPE": "Northern Europe",
 	"NORTHERN_IRELAND": "Northern Ireland",
 	"NORWAY": "Norway",
+	"NORWEGEN": "Norwegen",
 	"ONE_MONTH_SUBSCRIPTION": "1 Month",
 	"PAKISTAN": "Pakistan",
 	"POLAND": "Poland",
@@ -913,11 +926,15 @@
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
 	"ROMANIA": "Romania",
+	"ROMANIAN": "Romanian",
+	"RUSSIAN": "Russian",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"Show": "Show",
 	"SIX_MONTHS_SUBSCRIPTION": "6 Months",
 	"SLOVAKIA": "Slovakia",
+	"SLOVAKIAN": "Slovakian",
 	"SLOVENIA": "Slovenia",
+	"SLOVENIAN": "Slovenian",
 	"SOUTHERN_EUROPE": "Southern Europe",
 	"SPAIN": "Spain",
 	"SPANISH": "Spanish",
@@ -957,11 +974,16 @@
 	"success": "Success",
 	"suggestions-lang-na": "NA",
 	"SWEDEN": "Sweeden",
+	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
 	"THREE_MONTHS_SUBSCRIPTION": "3 Months",
 	"TURKEY": "Turkey",
+	"TURKISH": "Turkish",
 	"UK": "United Kingdom",
 	"UKRAINE": "Ucraine",
+	"UKRAINIAN": "Ukrainian",
+	"UKRANIAN": "Ukrainian",
+	"URDU": "Urdu",
 	"US": "USA",
 	"WESTERN_EUROPE": "Western Europe",
 	"WORLD": "World",
