--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -753,6 +753,7 @@
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Îles Britanniques",
 	"BULGARIA": "Bulgarie",
+	"BULGARIAN": "Bulgare",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Europe centrale",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
@@ -761,18 +762,23 @@
 	"create-candidate-success": "Vos données ont été téléchargées avec succès. Elles vont maintenant être examinées puis ajoutées au système.",
 	"CREDIT_BASED_SUBSCRIPTION": "Credit Based",
 	"CROATIA": "Croatie",
+	"CROATIAN": "Croate",
 	"CYPRUS": "Chypre",
+	"CZECH": "Tchèque",
 	"CZECH_REPUBLIC": "République tchèque",
 	"DACH": "Dach",
+	"DANISH": "Danois",
 	"DENMARK": "Danemark",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
 	"ENGLISH": "Anglais",
 	"ESTONIA": "Estonie",
+	"ESTONIAN": "Estonien",
 	"EU_REMOTE": "Europe - À distance",
 	"EUROPE": "L'Europe",
 	"failure": "Échec",
 	"FINLAND": "Finlande",
+	"FINNISH": "Finlandais",
 	"FRANCE": "France",
 	"FRENCH": "Français",
 	"func-ba": "Analyste d'affaires",
@@ -794,7 +800,10 @@
 	"GERMAN": "Allemand",
 	"GERMANY": "Allemagne",
 	"GREECE": "Grèce",
+	"GREEK": "Grec",
 	"Hide": "Cacher",
+	"HINDI": "Hindi",
+	"HUNGARIAN": "Hongrois",
 	"HUNGARY": "Affamé",
 	"INDIA": "Inde",
 	"info-item-contract-rate": "Taux de contrat",
@@ -823,12 +832,15 @@
 	"ITALIAN": "Italien",
 	"ITALY": "Italie",
 	"LATVIA": "Lettonie",
+	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
 	"LITHUANIA": "Lituanie",
+	"LITHUANIAN": "Lituanien",
 	"login-user-invalid-login": "Tentative de connexion invalide",
 	"login-user-unable-to-send-email": "Impossible d'envoyer un e-mail. E-mail peut-être inconnu.",
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malte",
+	"MALTESE": "Maltais",
 	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
 	"mp-left-failure-failed-to-persits-new-open-position": "Échec de la persistance de la nouvelle position ouverte",
 	"mp-left-mnu-city": "Ville",
@@ -864,6 +876,7 @@
 	"NORTHERN_EUROPE": "Europe du Nord",
 	"NORTHERN_IRELAND": "Irlande du Nord",
 	"NORWAY": "Norvège",
+	"NORWEGEN": "Norvégien",
 	"ONE_MONTH_SUBSCRIPTION": "1 mois",
 	"PAKISTAN": "Pakistan",
 	"POLAND": "Pologne",
@@ -913,11 +926,15 @@
 	"register-recruiter-success-title": "Succès",
 	"REPUBLIC_OF_IRELAND": "Irlande",
 	"ROMANIA": "Roumanie",
+	"ROMANIAN": "Roumain",
+	"RUSSIAN": "Russe",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"Show": "Montre",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mois",
 	"SLOVAKIA": "Slovaquie",
+	"SLOVAKIAN": "Slovaque",
 	"SLOVENIA": "La Slovénie",
+	"SLOVENIAN": "Slovène",
 	"SOUTHERN_EUROPE": "Europe du sud",
 	"SPAIN": "Espagne",
 	"SPANISH": "Espanol",
@@ -957,11 +974,16 @@
 	"success": "Succès",
 	"suggestions-lang-na": "NA",
 	"SWEDEN": "Suède",
+	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mois",
 	"TURKEY": "Dinde",
+	"TURKISH": "Turc",
 	"UK": "Royaume-Uni",
 	"UKRAINE": "Ukraine",
+	"UKRAINIAN": "Ukrainien",
+	"UKRANIAN": "",
+	"URDU": "Ourdou",
 	"US": "États-Unis",
 	"WESTERN_EUROPE": "Europe de l'Ouest",
 	"WORLD": "Monde",
