--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -753,6 +753,7 @@
 	"BENELUX": "Benelux",
 	"BRITISH_ISLES": "Britse eilanden",
 	"BULGARIA": "Bulgarije",
+	"BULGARIAN": "Bulgaars",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Centraal Europa",
 	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
@@ -761,18 +762,23 @@
 	"create-candidate-success": "Uw gegevens zijn succesvol geüpload. Ze worden nu beoordeeld en aan het systeem toegevoegd",
 	"CREDIT_BASED_SUBSCRIPTION": "Credit Based",
 	"CROATIA": "Kroatie",
+	"CROATIAN": "Kroatisch",
 	"CYPRUS": "Cyprus",
+	"CZECH": "Tsjechisch",
 	"CZECH_REPUBLIC": "Tsjechische Republiek",
 	"DACH": "Dach",
+	"DANISH": "Deens",
 	"DENMARK": "Denemarken",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
 	"ENGLISH": "Engels",
 	"ESTONIA": "Estland",
+	"ESTONIAN": "Estisch",
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
 	"failure": "Fout",
 	"FINLAND": "Finland",
+	"FINNISH": "Fins",
 	"FRANCE": "Frankrijk",
 	"FRENCH": "Frans",
 	"func-ba": "Bedrijfsanalist",
@@ -794,7 +800,10 @@
 	"GERMAN": "Duitse",
 	"GERMANY": "Duitsland",
 	"GREECE": "Griekenland",
+	"GREEK": "Grieks",
 	"Hide": "Verbergen",
+	"HINDI": "Hindi",
+	"HUNGARIAN": "Hongaars",
 	"HUNGARY": "Hongerig",
 	"INDIA": "Indië",
 	"info-item-contract-rate": "Contract Tarief",
@@ -823,12 +832,15 @@
 	"ITALIAN": "Italiaans",
 	"ITALY": "Italie",
 	"LATVIA": "Letland",
+	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
 	"LITHUANIA": "Litouwen",
+	"LITHUANIAN": "Litouws",
 	"login-user-invalid-login": "Ongeldige inlogpoging",
 	"login-user-unable-to-send-email": "Niet in staat e-mail te versturen. Mogelijk onbekend e-mailadres.",
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
+	"MALTESE": "Maltees",
 	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
 	"mp-left-failure-failed-to-persits-new-open-position": "Kan nieuwe open positie niet volhouden",
 	"mp-left-mnu-city": "Stad",
@@ -864,6 +876,7 @@
 	"NORTHERN_EUROPE": "Noord-Europa",
 	"NORTHERN_IRELAND": "Noord-Ierland",
 	"NORWAY": "Noorwegen",
+	"NORWEGEN": "Noorwegen",
 	"ONE_MONTH_SUBSCRIPTION": "1 maand",
 	"PAKISTAN": "Pakistan",
 	"POLAND": "Polen",
@@ -913,11 +926,15 @@
 	"register-recruiter-success-title": "Succes",
 	"REPUBLIC_OF_IRELAND": "Ierland",
 	"ROMANIA": "Roemenië",
+	"ROMANIAN": "Roemeense",
+	"RUSSIAN": "Russisch",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"Show": "Laten zien",
 	"SIX_MONTHS_SUBSCRIPTION": "6 maanden",
 	"SLOVAKIA": "Slowakije",
+	"SLOVAKIAN": "Slowaaks",
 	"SLOVENIA": "Slovenië",
+	"SLOVENIAN": "Sloveens",
 	"SOUTHERN_EUROPE": "Zuid-Europa",
 	"SPAIN": "Spanje",
 	"SPANISH": "Spaans",
@@ -957,11 +974,16 @@
 	"success": "Succes",
 	"suggestions-lang-na": "NA",
 	"SWEDEN": "Zweden",
+	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
 	"THREE_MONTHS_SUBSCRIPTION": "3 maanden",
 	"TURKEY": "Kalkoen",
+	"TURKISH": "Turks",
 	"UK": "Verenigd Koninkrijk",
 	"UKRAINE": "Oekraïne",
+	"UKRAINIAN": "Oekraïens",
+	"UKRANIAN": "",
+	"URDU": "Urdu",
 	"US": "VS",
 	"WESTERN_EUROPE": "West-Europa",
 	"WORLD": "Wereld",
