ES IT and DE language support

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -802,6 +802,7 @@
 	"GREECE": "Greece",
 	"GREEK": "Greek",
 	"Hide": "Hide",
+	"hide-filters": "Hide filters",
 	"HINDI": "Hindi",
 	"HUNGARIAN": "Hungarian",
 	"HUNGARY": "Hungry",
@@ -930,6 +931,7 @@
 	"RUSSIAN": "Russian",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"Show": "Show",
+	"show-filters": "Show Filters",
 	"SIX_MONTHS_SUBSCRIPTION": "6 Months",
 	"SLOVAKIA": "Slovakia",
 	"SLOVAKIAN": "Slovakian",
@@ -955,7 +957,7 @@
 	"static-country-world": "World",
 	"static-func-architecture": "Architecture",
 	"static-func-ba": "BA",
-	"static-func-bi": "Cloud",
+	"static-func-bi": "BI",
 	"static-func-cloud": "Cloud",
 	"static-func-devops": "Devops",
 	"static-func-dotnet": ".Net",
