--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -802,6 +802,7 @@
 	"GREECE": "Grèce",
 	"GREEK": "Grec",
 	"Hide": "Cacher",
+	"hide-filters": "Masquer les filtres",
 	"HINDI": "Hindi",
 	"HUNGARIAN": "Hongrois",
 	"HUNGARY": "Affamé",
@@ -930,6 +931,7 @@
 	"RUSSIAN": "Russe",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"Show": "Montre",
+	"show-filters": "Afficher les filtres",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mois",
 	"SLOVAKIA": "Slovaquie",
 	"SLOVAKIAN": "Slovaque",
@@ -955,7 +957,7 @@
 	"static-country-world": "Monde",
 	"static-func-architecture": "Architecture",
 	"static-func-ba": "BA",
-	"static-func-bi": "Cloud",
+	"static-func-bi": "BI",
 	"static-func-cloud": "Cloud",
 	"static-func-devops": "Devops",
 	"static-func-dotnet": ".Net",
