--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -802,6 +802,7 @@
 	"GREECE": "Griekenland",
 	"GREEK": "Grieks",
 	"Hide": "Verbergen",
+	"hide-filters": "Verberg filters",
 	"HINDI": "Hindi",
 	"HUNGARIAN": "Hongaars",
 	"HUNGARY": "Hongerig",
@@ -930,6 +931,7 @@
 	"RUSSIAN": "Russisch",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"Show": "Laten zien",
+	"show-filters": "Filters weergeven",
 	"SIX_MONTHS_SUBSCRIPTION": "6 maanden",
 	"SLOVAKIA": "Slowakije",
 	"SLOVAKIAN": "Slowaaks",
@@ -955,7 +957,7 @@
 	"static-country-world": "Wereld",
 	"static-func-architecture": "Architectuur",
 	"static-func-ba": "BA",
-	"static-func-bi": "Cloud",
+	"static-func-bi": "BI",
 	"static-func-cloud": "Cloud",
 	"static-func-devops": "Devops",
 	"static-func-dotnet": ".Net",
