Faster searches and better ordering

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1,6 +1,6 @@
 {
 	"arenella-accounts-menu-availability": "Verfügbarkeit",
-	"arenella-accounts-menu-candidates": "Kandidaten", 
+	"arenella-accounts-menu-candidates": "Kandidaten",
 	"arenella-accounts-menu-cities": "Städte",
 	"arenella-accounts-menu-recruiters": "Personalvermittler",
 	"arenella-accounts-menu-skills": "Fähigkeiten",
@@ -90,7 +90,7 @@
 	"arenella-app-menu-community": "Gemeinschaft",
 	"arenella-app-menu-contact": "Kontakt",
 	"arenella-app-menu-emails": "E-Mails",
-	"arenella-app-menu-faq": "FAQ",
+	"arenella-app-menu-faq": "Faq",
 	"arenella-app-menu-job-board": "Jobbörse",
 	"arenella-app-menu-jobs": "Jobs",
 	"arenella-app-menu-login": "Anmeldung",
