--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -83,14 +83,14 @@
 	"arenella-app-credits-mp": "Todavía tienes {{creditsMarketplace}} tokens para solicitar candidatos en Marketplace.",
 	"arenella-app-credits-text-footer": "Optar por una suscripción paga proporcionará acceso ilimitado a todas las funciones del sitio durante la duración de la suscripción.",
 	"arenella-app-credits-wait-for-credits": "Espere nuevos créditos",
-	"arenella-app-menu-about": "Sobre Nosotros",
+	"arenella-app-menu-about": "Nosotros",
 	"arenella-app-menu-account": "Cuenta",
 	"arenella-app-menu-accounts": "Cuentas",
 	"arenella-app-menu-candidate-signup": "Registro de candidatos",
 	"arenella-app-menu-community": "Comunidad",
-	"arenella-app-menu-contact": "CONTACTO",
+	"arenella-app-menu-contact": "Contacto",
 	"arenella-app-menu-emails": "Correos",
-	"arenella-app-menu-faq": "Preguntas más frecuentes",
+	"arenella-app-menu-faq": "Faq",
 	"arenella-app-menu-job-board": "Trabajo",
 	"arenella-app-menu-jobs": "Empleos",
 	"arenella-app-menu-login": "Acceso",
