--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -90,7 +90,7 @@
 	"arenella-app-menu-community": "Comunità",
 	"arenella-app-menu-contact": "Contatto",
 	"arenella-app-menu-emails": "E-mail",
-	"arenella-app-menu-faq": "FAQ",
+	"arenella-app-menu-faq": "Faq",
 	"arenella-app-menu-job-board": "Lavoro",
 	"arenella-app-menu-jobs": "Lavori",
 	"arenella-app-menu-login": "Login",
